infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: assetic-poc
  labels:
    app.kubernetes.io/part-of: assetic
    app.kubernetes.io/environment: poc
